--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,23 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- ✅ PERMISSIONS MODERNES pour Android 13+ -->
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
-    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
-    <uses-permission android:name="android.permission.READ_MEDIA_VISUAL_USER_SELECTED" />
-
-    <!-- ✅ PERMISSION CAMÉRA avec feature optionnelle pour émulateur -->
+    <!-- ✅ PERMISSIONS EXACTES -->
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false" />
-    <uses-feature
-        android:name="android.hardware.camera2"
-        android:required="false" />
-
-    <!-- ✅ PERMISSIONS LEGACY pour compatibilité Android 12 et moins -->
-    <uses-permission
-        android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
 
     <application
@@ -32,7 +19,6 @@
         android:theme="@style/Theme.DAMTP_1"
         tools:targetApi="31">
 
-        <!-- ✅ ACTIVITÉ PRINCIPALE -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -43,15 +29,15 @@
             </intent-filter>
         </activity>
 
-        <!-- ✅ FILEPROVIDER pour partage sécurisé de fichiers -->
+        <!-- ✅ FILEPROVIDER CORRECT -->
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="${applicationId}.provider"
+            android:authorities="${applicationId}.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths" />
+                android:resource="@xml/file_paths" />
         </provider>
 
     </application>
